@@ -10,6 +10,7 @@
 * Added last paragraph test.
 * First-run clean-up of the character tests.
 * Added the charater tests.
+* Made some initial changes to theh table tests.
 
 2008.02.28
 
